# nlp2sql

./: .env.example  .gitignore  CLAUDE.md  PROJECT.md  README.md  TODO.md  pyproject.toml  sample_questions.txt
assets/: graph.mmd
data/: checkpoints.db-shm  checkpoints.db-wal  setup_db.py
docs/: example-trace.md
scripts/: render_graph.py
src/nlp2sql/: __init__.py  cli.py  config.py  graph.py  observability.py  sql_safety.py  state.py
src/nlp2sql/cache/: __init__.py  base.py  memory.py
src/nlp2sql/db/: __init__.py  connection.py  introspect.py
src/nlp2sql/llm/: __init__.py  client.py  prompts.py  schemas.py
src/nlp2sql/metadata/: __init__.py  base.py  sakila.yaml  sidecar.py
src/nlp2sql/nodes/: __init__.py  answer.py  clarification.py  column_selection.py  execute.py  ingest.py  plan.py  relevance.py  rephrase.py  schema_guard.py  sql_generation.py  table_selection.py  verify.py
src/nlp2sql/persistence/: __init__.py  conversations.py
src/nlp2sql/prompts/: answer.system.j2  answer.user.j2  clarification.system.j2  clarification.user.j2  column_selection.system.j2  guard.system.j2  guard.user.j2  plan.system.j2  plan.user.j2  relevance.system.j2  relevance.user.j2  rephrase.system.j2  rephrase.user.j2  sql_generation.system.j2  sql_generation.user.j2  table_selection.system.j2  table_selection.user.j2  verify.system.j2  verify.user.j2
src/nlp2sql/prompts/fragments/: domain.j2  plan_block.j2
tests/: test_conversation_store.py  test_db.py  test_metadata.py  test_prompts.py  test_relevance.py  test_routing.py  test_sql_safety.py
