[project]
name = "nlp2sql"
version = "0.1.0"
description = "NLP-to-SQL agent (LangGraph) over a movie database, with caching and conversation ingestion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.40",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.1.100",
    "jinja2>=3.1",
    "sqlparse>=0.5.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
nlp2sql = "nlp2sql.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nlp2sql = ["prompts/**/*.j2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
